test/good/generators/generator09.px

func f(): Void... def
    print 'a'
    yield
    print 'b'

for _ in f() do
    print 1
