test/bad/classes/method06.px

class Test def
    func f(): Void def
        skip

f()
